--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
         <h4>den fedeste side i verden</h4>
-        <p>ja det er vi, alt fungerer fint<a href="http://www.getskeleton.com">Skeleton documentation</a>.</p>
+        <p>Stadig den fedeste side<a href="">Skeleton documentation</a>.</p>
       </div>
     </div>
   </div>
