--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>hej med digfff</title>
+  <title>Min hjemmeside</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -34,8 +34,8 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h4>den fedeste side i verden</h4>
-        <p>Stadig den fedeste side<a href="">Skeleton documentation</a>.</p>
+        <h4>Velkommen til  min hjemmeside</h4>
+        <p>Dette er min hjemmeside<a href=""></a>.</p>
       </div>
     </div>
   </div>
