--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Caminar by TEMPLATED</title>
+		<title>OLLIE</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Caminar <span>by TEMPLATED</span></a></div>
+				<div class="logo"><a href="#">OLLIE <span></span></a></div>
 			</header>
 
 		<!-- Main -->
@@ -26,44 +26,48 @@
 					<section id="one" class="wrapper style1">
 
 						<div class="image fit flush">
-							<img src="images/pic02.jpg" alt="" />
+							<img src="images/top.png" alt="" />
 						</div>
 						<header class="special">
-							<h2>Fringilla Fermentum Tellus</h2>
-							<p>vehicula urna sed justo bibendum</p>
+							<h2>FAKTA</h2>
+							<p>Om Ollie</p>
 						</header>
 						<div class="content">
-							<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel. Vestibulum et efficitur urna. Duis velit nulla, interdum sed felis sit amet, facilisis auctor nunc. Cras luctus urna at risus feugiat scelerisque nec sed diam. </p>
-							<p>Nunc fringilla metus odio, at rutrum augue tristique vel. Nulla ac tellus a neque ullamcorper porta a vitae ipsum. Morbi est sapien, hendrerit quis mi in, aliquam bibendum orci. Vestibulum imperdiet nibh vitae maximus posuere. Aenean sit amet nibh feugiat, condimentum tellus eu, malesuada nunc. Mauris ac pulvinar turpis, sit amet pharetra est. Ut bibendum justo condimentum, vehicula ex vel, venenatis libero. Etiam vehicula urna sed justo bibendum, ac lacinia nunc pulvinar. Integer nec velit orci. Vestibulum pellentesque varius dapibus. Morbi ullamcorper augue est, sed luctus orci fermentum dictum. Nunc tincidunt, nisl consequat convallis viverra, metus nisl ultricies dui, vitae dapibus ligula urna sit amet nibh. Duis ut venenatis enim.</p>
+							<p> <b>Navn:</b> Ollie</p>
+							<p> <b>Race:</b> Dværgpuddel</p>
+							<p> <b>Født:</b> 13.05.20</p>
+							<p> <b>Vægt:</b> 6,2 kg</p>
+							<p> <b>Farve:</b> Fawn</p>
+							<p> <b>Om racen:</b> Dværgpudlen er den anden mindste af pudelracerne. Foruden dværgpudlen findes toypuddel, minipuddel og storpuddel. Pudlen er en klog og lærenem familiehund og findes i mange forskellige farver.</p>
 						</div>
 					</section>
 
 				<!-- Two -->
 					<section id="two" class="wrapper style2">
 						<header>
-							<h2>Vestibulum Convallis</h2>
-							<p>vehicula urna sed justo bibendum</p>
+							<h2>Ollies album</h2>
+							<p>Billeder fra forskellige stunder i Ollies liv</p>
 						</header>
 						<div class="content">
 							<div class="gallery">
 								<div>
 									<div class="image fit flush">
-										<a href="images/pic03.jpg"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="images/7.jpg"><img src="images/7.jpg" alt="" /></a>
 									</div>
 								</div>
 								<div>
 									<div class="image fit flush">
-										<a href="images/pic01.jpg"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="images/O8.jpeg"><img src="images/O8.jpeg" alt="" /></a>
 									</div>
 								</div>
 								<div>
 									<div class="image fit flush">
-										<a href="images/pic04.jpg"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="images/O9.jpeg"><img src="images/O9.jpeg" alt="" /></a>
 									</div>
 								</div>
 								<div>
 									<div class="image fit flush">
-										<a href="images/pic05.jpg"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="images/O1.jpg"><img src="images/skov.jpg" alt="" /></a>
 									</div>
 								</div>
 							</div>
@@ -73,24 +77,24 @@
 				<!-- Three -->
 					<section id="three" class="wrapper">
 						<div class="spotlight">
-							<div class="image flush"><img src="images/pic06.jpg" alt="" /></div>
+							<div class="image flush"><img src="images/03.png" alt="" /></div>
 							<div class="inner">
-								<h3>Viverra Hendrerit</h3>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
+								<h3>Godmorgen!</h3>
+								<p>Her er jeg 3 uger og allerede klar på ballade</p>
 							</div>
 						</div>
 						<div class="spotlight alt">
-							<div class="image flush"><img src="images/pic07.jpg" alt="" /></div>
+							<div class="image flush"><img src="images/O5.jpeg" alt="" /></div>
 							<div  class="inner">
-								<h3>Curabitur Eget</h3>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
+								<h3>Se mig!</h3>
+								<p>Min første tur til København - og jeg så Den Lille Havfrue</p>
 							</div>
 						</div>
 						<div class="spotlight">
-							<div class="image flush"><img src="images/pic08.jpg" alt="" /></div>
+							<div class="image flush"><img src="images/2.jpg" alt="" /></div>
 							<div class="inner">
-								<h3>Morbi Eleifend</h3>
-								<p>Curabitur eget semper ante. Morbi eleifend ultricies est, a blandit diam vehicula vel. Vestibulum porttitor nisi quis viverra hendrerit. Suspendisse vel volutpat nibh, vel elementum lacus. Maecenas commodo pulvinar dui, at cursus metus imperdiet vel.</p>
+								<h3>Tid til at lege!</h3>
+								<p>Her er mig og min bedste ven, Hugo</p>
 							</div>
 						</div>
 					</section>
