--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<!-- Three -->
 					<section id="three" class="wrapper">
 						<div class="spotlight">
-							<div class="image flush"><img src="images/03.png" alt="" /></div>
+							<div class="image flush"><img src="images/Godmorgen.jpg" alt="" /></div>
 							<div class="inner">
 								<h3>Godmorgen!</h3>
 								<p>Her er jeg 3 uger og allerede klar på ballade</p>
